# jz-hdl

./: .gitignore  AGENTS.md  LICENSE.md  README.md  clock issue.md  issues.md  not_tested.md
compiler/: CMakeLists.txt
compiler/cmake/: EmbedJson.cmake  GenerateVersion.cmake
compiler/data/: gw1nr-9-qn88-c6-i5.json  gw1nz-1-qn48-c6-i5.json  gw2ar-18-qn88-c7-i6.json  gw2ar-18-qn88-c8-i7.json  gw5a-lv25-mg121-c1-i0.json  ice40up-5k-sg.json  ice40up-5k-uwg.json  lfe5u-45f-6bg381.json  xc7a35t-2fgg484.json  xc7a35t-2fgg484i.json
compiler/include/: arena.h  ast.h  ast_json.h  chip_data.h  compiler.h  diagnostic.h  ir.h  ir_builder.h  ir_mem_bind.h  ir_serialize.h  lexer.h  lsp.h  parser.h  path_security.h  repeat_expand.h  rtlil_backend.h  rules.h  sem.h  sem_driver.h  template_expand.h  util.h  verilog_backend.h  version.h
compiler/src/: arena.c  chip_data.c  chip_data_internal.h  cli_frontend.c  cli_frontend.h  cli_modes.c  cli_modes.h  cli_options.c  cli_options.h  compiler.c  diagnostic.c  lexer.c  main.c  path_security.c  repeat_expand.c  rules.c  util.c
compiler/src/ast/: ast.c  ast_json.c
compiler/src/ir/: ir_build_clock.c  ir_build_design.c  ir_build_expr.c  ir_build_instance.c  ir_build_memory.c  ir_build_signal.c  ir_build_stmt.c  ir_div_guard.c  ir_internal.h  ir_library.c  ir_library.h  ir_serialize.c  ir_tristate_transform.c
compiler/src/lsp/: lsp_internal.h  lsp_io.c  lsp_json.c  lsp_project_discovery.c  lsp_server.c
compiler/src/parser/: parser_blocks.c  parser_cdc.c  parser_core.c  parser_expressions.c  parser_import.c  parser_instance.c  parser_internal.h  parser_mem.c  parser_module.c  parser_mux.c  parser_port.c  parser_project.c  parser_project_blocks.c  parser_register.c  parser_simulation.c  parser_statements.c  parser_template.c  parser_testbench.c  parser_wire.c
compiler/src/report/: chip_report.c  memory_report.c
compiler/src/sem/: const_eval.c  const_eval_test.c  driver.c  driver_assign.c  driver_clocks.c  driver_comb.c  driver_control.c  driver_expr.c  driver_flow.c  driver_instance.c  driver_internal.h  driver_literal.c  driver_mem.c  driver_net.c  driver_operators.c  driver_project.c  driver_project_hw.c  driver_testbench.c  driver_tristate.c  driver_width.c  literal.c  literal_test.c  template_expand.c  tristate_types.h  type.c  type_test.c
compiler/src/sim/: sim_engine.c  sim_engine.h  sim_eval.c  sim_eval.h  sim_exec.c  sim_exec.h  sim_fst.c  sim_fst.h  sim_jzw.c  sim_jzw.h  sim_perf.c  sim_perf.h  sim_state.c  sim_state.h  sim_value.c  sim_value.h  sim_vcd.c  sim_vcd.h  sim_waveform.c  sim_waveform.h
compiler/tests/: issues.md  not_tested.md  run_validation.sh  summary-old.md  summary.md  update_golden.sh
compiler/tests/simulation/: counter.jz  counter.vcd  dual_clock.jz  dual_clock.vcd  print_sim.jz  print_sim.vcd  repeat_sim.jz  run_until_while.jz
compiler/tests/testbenches/: testbench_basic.jz  testbench_print.jz  testbench_repeat.jz  testbench_tristate.jz
compiler/tests/validation/: 10_1_HAPPY_PATH-template_purpose_ok.jz  10_1_TEMPLATE_PURPOSE-simple_template_ok.jz  10_2_HAPPY_PATH-template_definition_ok.jz  10_2_TEMPLATE_DEFINITION-valid_definitions_ok.jz  10_2_TEMPLATE_DUP_NAME-duplicate_template_names.jz  10_2_TEMPLATE_DUP_NAME-duplicate_template_names.out  10_2_TEMPLATE_DUP_PARAM-duplicate_param_names.jz  10_2_TEMPLATE_DUP_PARAM-duplicate_param_names.out  10_3_HAPPY_PATH-template_allowed_content_ok.jz  10_3_HAPPY_PATH-template_const_config_refs_ok.jz  10_3_TEMPLATE_ALLOWED_CONTENT-valid_content_ok.jz  10_3_TEMPLATE_EXTERNAL_REF-external_signal_reference.jz  10_3_TEMPLATE_EXTERNAL_REF-external_signal_reference.out  10_3_TEMPLATE_SCRATCH_OUTSIDE-scratch_outside_template.jz  10_3_TEMPLATE_SCRATCH_OUTSIDE-scratch_outside_template.out  10_3_TEMPLATE_SCRATCH_WIDTH_INVALID-scratch_width_not_constant.jz  10_3_TEMPLATE_SCRATCH_WIDTH_INVALID-scratch_width_not_constant.out  10_4_HAPPY_PATH-template_forbidden_content_ok.jz  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-async_file_scoped.jz  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-async_file_scoped.out  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-async_mod_scoped.jz  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-async_mod_scoped.out  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-cdc_file_scoped.jz  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-cdc_file_scoped.out  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-cdc_mod_scoped.jz  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-cdc_mod_scoped.out  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-sync_async_in_template.jz  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-sync_async_in_template.out  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-sync_file_scoped.jz  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-sync_file_scoped.out  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-sync_mod_scoped.jz  10_4_TEMPLATE_FORBIDDEN_BLOCK_HEADER-sync_mod_scoped.out  10_4_TEMPLATE_FORBIDDEN_CONTENT-valid_template_ok.jz  10_4_TEMPLATE_FORBIDDEN_DECL-declaration_blocks_in_template.jz  10_4_TEMPLATE_FORBIDDEN_DECL-declaration_blocks_in_template.out  10_4_TEMPLATE_FORBIDDEN_DIRECTIVE-feature_in_mod_template.jz  10_4_TEMPLATE_FORBIDDEN_DIRECTIVE-feature_in_mod_template.out  10_4_TEMPLATE_FORBIDDEN_DIRECTIVE-feature_in_template.jz  10_4_TEMPLATE_FORBIDDEN_DIRECTIVE-feature_in_template.out  10_4_TEMPLATE_FORBIDDEN_DIRECTIVE-module_in_mod_template.jz  (+1538 more)
compiler/tests/validation_old/: ASSIGN_CONCAT_WIDTH_MISMATCH.out  ASSIGN_INDEPENDENT_IF_SELECT.jz  ASSIGN_SHADOWING.jz  ASSIGN_SHADOWING.out  ASSIGN_SLICE_OVERLAP.out  ASSIGN_TO_NON_REGISTER_IN_SYNC.jz  ASSIGN_WIDTH_NO_MODIFIER.out  ASYNC_ALIAS_IN_CONDITIONAL.jz  ASYNC_INVALID_STATEMENT_TARGET.out  ASYNC_UNDEFINED_PATH_NO_DRIVER.out  ASYNC_UNDEFINED_PATH_NO_DRIVER2.jz  ASYNC_UNDEFINED_PATH_NO_DRIVER2.out  BLACKBOX_NAME_DUP_IN_PROJECT.jz  BLACKBOX_NAME_DUP_IN_PROJECT.out  BSWAP_WIDTH_NOT_BYTE_ALIGNED.jz  BSWAP_WIDTH_NOT_BYTE_ALIGNED.out  BUS_BULK_ROLE_CONFLICT.out  BUS_DEF_DUP_NAME.out  BUS_PORT_INDEX_OUT_OF_RANGE.jz  BUS_PORT_INDEX_REQUIRED.jz  BUS_PORT_INDEX_REQUIRED.out  BUS_PORT_INVALID_ROLE.jz  BUS_SIGNAL_READ_FROM_WRITABLE.out  BUS_SIGNAL_UNDEFINED.jz  (+270 more)
viewer/: .gitignore  CMakeLists.txt
viewer/src/: main.cpp
(+701 files in other folders)
